tests/sumo/output/e2/errors/file_missing/errors.sumo
Error: Attribute 'file' is missing in definition of e2Detector '4/1to3/1'.
Quitting (on error).
